# symFP

./: CMakeLists.txt  CMakeLists.txt.standalone  README.md  SoftwareArtifact.md  argAnalysis.cpp  brchAnalysis.cpp  brchAnalysis.hpp  gVarAnalysis.cpp  idxAnalysis.cpp  idxAnalysis.hpp  loopAnalysis.cpp  loopAnalysis.hpp  sampleNumAnalysis.cpp  sampleNumAnalysis.hpp  ssCodeGen.cpp  ssCodeGen.hpp  ssCodeGen_ref.cpp  ssCodeGen_ref.hpp  symFP.cpp
lib/: AccessGraphAnalysis.cpp  AccessGraphAnalysis.hpp  CMakeLists.txt  IVDependenceAnalysis.cpp  IVDependenceAnalysis.hpp  Utils.hpp  argAnalysis.cpp  brchAnalysis.cpp  brchAnalysis.hpp  dynSchCodeGen_ref.cpp  dynSchCodeGen_ref.hpp  gVarAnalysis.cpp  gVarAnalysis.hpp  idxAnalysis.cpp  idxAnalysis.hpp  loopAnalysis.cpp  loopAnalysis.hpp  loopTreeTransform.cpp  loopTreeTransform.hpp  modelCodeGenOpt_ref.cpp  modelCodeGenOpt_ref.hpp  modelCodeGen_ref.cpp  modelCodeGen_ref.hpp  plumCodeGenUtil.cpp  plumCodeGenUtil.hpp  plumCodeGen_ref.cpp  plumCodeGen_ref.hpp  plumSamplerCodeGenerator.cpp  plumSamplerCodeGenerator.hpp  psCodeGen_ref.cpp  psCodeGen_ref.hpp  riAccCodeGen_ref.cpp  riAccCodeGen_ref.hpp  riCodeGen_ref.cpp  riCodeGen_ref.hpp  riIterCodeGen_ref.cpp  riIterCodeGen_ref.hpp  rsCodeGen_ref.cpp  rsCodeGen_ref.hpp  rs_demo.py  (+17 more)
process/: plotMRC_staticSampling_VS_trace.py  process.py
sps/: CMakeLists.txt  CMakeLists.txt.bk  CMakeLists.txt.standalone  argAnalysis.hpp  brchAnalysis.hpp  idxAnalysis.cpp  loopAnalysis.cpp  sampleNumAnalysis.cpp  sampleNumAnalysis.hpp  samplingRate.hpp  sps.cpp  ssCodeGen.hpp  ssCodeGen_ref.cpp  ssCodeGen_ref.hpp  symFP.cpp
test/: 3mm.c  Makefile  brchtest.c  correlation.bc  correlation.bc.opt  covariance.c  gemver.c  syrk.c
test/complicateBench/: fft.c  fft2d.c
test/polyBench/: 3mm.bc  3mm.bc.opt  3mm.c  atax.bc  atax.c  atax.ll  bicg.bc  bicg.bc.opt  bicg.c  convolution_2d.bc  convolution_2d.bc.opt  convolution_2d.c  convolution_3d.bc  convolution_3d.bc.opt  convolution_3d.c  correlation.bc  correlation.bc.opt  covariance.bc  covariance.bc.opt  gemm.bc  gemm.bc.opt  gemm.c  gemver.bc  gemver.bc.opt  gemver.c  gesummv.bc  gesummv.bc.opt  gesummv.c  mvt.bc  mvt.bc.opt  mvt.c  stencil.bc  stencil.bc.opt  stencil.c  stencil.ll  syrk.bc  syrk.bc.opt  syrk.c
test/polyBenchNew/: Makefile
test_facility/: Makefile
test_facility/ref_trace_osl_result/: 2mm_ref_osl_trace_result.txt  3mm_ref_osl_trace_result.txt  atax_ref_osl_trace_result.txt  bicg_ref_osl_trace_result.txt  cholesky_ref_osl_trace_result.txt  correlation_ref_osl_trace_result.txt  doitgen_ref_osl_trace_result.txt  durbin_ref_osl_trace_result.txt  floyd_warshall_ref_osl_trace_result.txt  gemm_ref_osl_trace_result.txt  gemver_ref_osl_trace_result.txt  gesummv_ref_osl_trace_result.txt  gramschmidt_ref_osl_trace_result.txt  heat_3d_ref_osl_trace_result.txt  jacobi_1d_ref_osl_trace_result.txt  jacobi_2d_ref_osl_trace_result.txt  mvt_ref_osl_trace_result.txt  seidel_2d_ref_osl_trace_result.txt  syrk_ref_osl_trace_result.txt  trisolv_ref_osl_trace_result.txt
test_facility/ref_trace_osl_src/: 2mm_ref_arr.cpp  3mm_ref_arr.cpp  adi_ref_arr.cpp  atax_ref_arr.cpp  bicg_ref_arr.cpp  cholesky_ref_arr.cpp  convolution_2d_ref_arr.cpp  convolution_3d_ref_arr.cpp  correlation_ref_arr.cpp  covariance_ref_arr.cpp  deriche_ref_arr.cpp  doitgen_ref_arr.cpp  durbin_ref_arr.cpp  fdtd_2d_ref_arr.cpp  floyd_warshall_ref_arr.cpp  gemm_ref_arr.cpp  gemver_ref_arr.cpp  gesummv_ref_arr.cpp  gramschmidt_ref_arr.cpp  heat_3d_ref_arr.cpp  jacobi_1d_ref_arr.cpp  jacobi_2d_ref_arr.cpp  lu_ref_arr.cpp  ludcmp_ref_arr.cpp  mvt_ref_arr.cpp  nussinov_ref_arr.cpp  seidel_2d_ref_arr.cpp  stencil_ref_arr.cpp  symm_ref_arr.cpp  syr2d_ref_arr.cpp  syrk_ref_arr.cpp  trisolv_ref_arr.cpp  trmm_ref_arr.cpp
test_facility/ref_trace_result/: 2mm_ref_arr_trace_result.txt  3mm_ref_arr_trace_result.txt  adi_ref_arr_trace_result.txt  atax_ref_arr_trace_result.txt  bicg_ref_arr_trace_result.txt  cholesky_ref_arr_trace_result.txt  correlation_ref_arr_trace_result.txt  covariance_ref_arr_trace_result.txt  deriche_ref_arr_trace_result.txt  doitgen_ref_arr_trace_result.txt  durbin_ref_arr_trace_result.txt  fdtd_2d_ref_arr_trace_result.txt  floyd_warshall_ref_arr_trace_result.txt  gemm_ref_arr_trace_result.txt  gemver_ref_arr_trace_result.txt  gesummv_ref_arr_trace_result.txt  gramschmidt_ref_arr_trace_result.txt  heat_3d_ref_arr_trace_result.txt  jacobi_1d_ref_arr_trace_result.txt  jacobi_2d_ref_arr_trace_result.txt  lu_ref_arr_trace_result.txt  ludcmp_ref_arr_trace_result.txt  mvt_ref_arr_trace_result.txt  nussinov_ref_arr_trace_result.txt  seidel_2d_ref_arr_trace_result.txt  symm_ref_arr_trace_result.txt  syr2d_ref_arr_trace_result.txt  syrk_ref_arr_trace_result.txt  trisolv_ref_arr_trace_result.txt  trmm_ref_arr_trace_result.txt
test_facility/ref_trace_src/: 2mm_ref_arr.cpp  3mm_ref_arr.cpp  a.out  adi_ref_arr.cpp  atax_ref_arr.cpp  bicg_ref_arr.cpp  cholesky_ref_arr.cpp  convolution_2d_ref_arr.cpp  convolution_3d_ref_arr.cpp  correlation_ref_arr.cpp  covariance_ref_arr.cpp  deriche_ref_arr.cpp  doitgen_ref_arr.cpp  durbin_ref_arr.cpp  fdtd_2d_ref_arr.cpp  floyd_warshall_ref_arr.cpp  gemm_ref_arr.cpp  gemver_ref_arr.cpp  gesummv_ref_arr.cpp  gramschmidt_ref_arr.cpp  heat_3d_ref_arr.cpp  jacobi_1d_ref_arr.cpp  jacobi_2d_ref_arr.cpp  lu_ref_arr.cpp  ludcmp_ref_arr.cpp  mvt_ref_arr.cpp  nussinov_ref_arr.cpp  seidel_2d_ref_arr.cpp  stencil_ref_arr.cpp  symm_ref_arr.cpp  syr2d_ref_arr.cpp  syrk_ref_arr.cpp  trisolv_ref_arr.cpp  trmm_ref_arr.cpp
test_facility/scripts/: aet_analysis.py  baseline_bound_finder.py  model_verify.py  mrc_plots.py  osl_run.py  perRefRTHistoGen.py  phase_run.py  plum_run.py  static_thread_tuning.py  trace_run.py
test_facility/ss_bc/: 2mm.bc  2mm.bc.opt  3mm.bc  3mm.bc.opt  adi.bc  adi.bc.opt  atax.bc  atax.bc.opt  bicg.bc  bicg.bc.opt  cholesky.bc  cholesky.bc.opt  deriche.bc  (+49 more)
trace/: 3mm.cpp  Makefile  atax.cpp  bicg.cpp  convolution_2d.cpp  convolution_3d.cpp  correlation.cpp  covariance.cpp  gemm.cpp  gemver.cpp  gesummv.cpp  mvt.cpp  run_trace.sh  stencil.cpp  syrk.cpp
(+687 files in other folders)
